--- a/src/all.css
+++ b/src/all.css
@@ -1,6 +1,6 @@
 .link{
-    background-color:darkblue ;
-    color: cyan;
+    background-color:rgba(0, 0, 0, 0.884) ;
+    color: rgb(233, 233, 233);
     margin: 1rem;
     padding: 0.5rem;
     text-decoration: none;
@@ -16,7 +16,7 @@ hr{
     margin: 1rem;
     padding: 1rem;
     border: 0.1rem solid black;
-    border-radius: 1rem;
+    border-radius: 0.5rem;
 }
  h1{
      display: inline;
